[project]
name = "laserbeak"
version = "0.6.0"
description = "CLI tool for tweeting and replying via Twitter/X GraphQL API"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Peter Steinberger" }]
dependencies = [
  "browser-cookie3>=0.20.1",
  "httpx>=0.27.0",
  "json5>=0.9.25",
  "platformdirs>=4.2.2",
  "typer>=0.12.3",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
laserbeak = ["data/*.json", "py.typed"]

[project.scripts]
laserbeak = "laserbeak.cli:app"

[project.urls]
Homepage = "https://github.com/zheli/laserbeak"
Changelog = "https://github.com/zheli/laserbeak/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]
